--- a/04 - Examen/app/src/main/res/values/colors.xml
+++ b/04 - Examen/app/src/main/res/values/colors.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="pastelBlue">#a4c3e3</color>
+    <color name="pastelPink">#f3a6d8</color>
+    <color name="pastelGreen">#b8e994</color>
+    <color name="pastelPurple">#d4a5a5</color>
+    <color name="pastelYellow">#f9dcc4</color>
+    <color name="pastelMint">#a1e5ab</color>
+    <color name="pastelPeach">#fad02e</color>
+    <color name="pastelLavender">#c8a2c8</color>
+    <color name="pastelCoral">#f88379</color>
+    <color name="pastelTurquoise">#74b9ff</color>
+
+    <color name="items">#4C54E6</color>
 </resources>
