--- a/04 - Examen/app/src/main/res/layout/activity_ingresar_atleta_deporte.xml
+++ b/04 - Examen/app/src/main/res/layout/activity_ingresar_atleta_deporte.xml
@@ -13,12 +13,13 @@
         android:layout_height="wrap_content"
         app:errorEnabled="true"
         android:layout_marginTop="10dp">
+
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/input_valor"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="Calificacion"
-            android:inputType="numberDecimal"/>
+            android:hint="Nombre"
+            android:inputType="numberDecimal" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -31,19 +32,20 @@
             android:id="@+id/input_materia"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="Materia" />
+            android:hint="Altura" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:errorEnabled="true">
+
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/input_codMateria"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="Id materia"
-            android:inputType="number"/>
+            android:hint="Edad"
+            android:inputType="number" />
     </com.google.android.material.textfield.TextInputLayout>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
